src/css/Lyrics/Mixed.css
/* ... */
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .word,
/* #SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .dotGroup,  */
  #SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letterGroup {
  --text-shadow-blur-radius: 4px;
  --text-shadow-opacity: 0%;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line:not(.musical-line) .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letterGroup {
  display: inline-block;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Active .letterGroup {
  text-shadow: 0 0 var(--text-shadow-blur-radius) rgba(255, 255, 255, var(--text-shadow-opacity));
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.bg-line .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.bg-line .letterGroup .letter {
  --gradient-alpha: 0.6;
  --gradient-alpha-end: 0.3;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.OppositeAligned {
  justify-content: flex-end;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung {
  opacity: var(--Vocal-Sung-opacity);
  --gradient-position: 100% !important;
}

/* #SpicyLyricsPage.SpicyRenderer.Podcast .LyricsContainer .LyricsContent .line.Sung {
  opacity: .3 !important;
}
 */
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung {
  scale: var(--DefaultLineScale);
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung {
  opacity: var(--Vocal-NotSung-opacity);
  --gradient-position: -20% !important;
}

/* #SpicyLyricsPage.SpicyRenderer.Podcast .LyricsContainer .LyricsContent .line.NotSung {
  opacity: .34 !important;
}
 */

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung:hover,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung:hover .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung:hover .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung:hover,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung:hover .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung:hover .letter {
  opacity: var(--Vocal-Hover-opacity, 1) !important;
  --BlurAmount: 0px !important;
}

#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .word:not(.PartOfWord, .dot, .LastWordInLine)::after,
#SpicyLyricsPage.SpicyRenderer
  .LyricsContainer
  .LyricsContent
  .line
  .letterGroup:not(.PartOfWord, .dot, .LastWordInLine)::after {
  content: "";
  margin-right: 0.3ch;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .letter {
  --text-shadow-blur-radius: 4px !important;
  --text-shadow-opacity: 0% !important;
  --gradient-position: -20% !important;
}

/* #SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .word {
  transform: translateY(calc(var(--DefaultLyricsSize) * 0.01)) !important;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .letterGroup,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .letter {
  transform: translateY(calc(var(--DefaultLyricsSize) * 0.02)) !important;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .letter,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.NotSung .letterGroup {
  scale: var(--DefaultEmphasisLyricsScale);
} */

#SpicyLyricsPage.SpicyRenderer .word-group {
  display: inline-flex;
  white-space: nowrap;
  flex-wrap: wrap;
  justify-content: flex-start;
}

#SpicyLyricsPage.SpicyRenderer .OppositeAligned .word-group {
  justify-content: flex-end;
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung .letter {
  --gradient-position: 100% !important;
  /*   --text-shadow-blur-radius: 4px !important;
  --text-shadow-opacity: 0% !important;
  transform: translateY(0) !important;
  scale: 1 !important; */
}

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.FeelSung .word,
#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.FeelSung .letter {
  --text-shadow-blur-radius: 4px !important;
  --text-shadow-opacity: 0% !important;
  transform: translateY(0) !important;
  scale: 1 !important;
}

/* #SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line.Sung .letterGroup {
  transform: translateY(0) !important;
} */

#SpicyLyricsPage.SpicyRenderer .LyricsContainer .LyricsContent .line .letterGroup {
  display: inline-flex;
}

#SpicyLyricsPage.SpicyRenderer.UseSpicyFont .LyricsContainer .LyricsContent .line.bg-line,
#SpicyLyricsPage.SpicyRenderer.UseSpicyFont .LyricsContainer .LyricsContent .line.bg-line .word,
#SpicyLyricsPage.SpicyRenderer.UseSpicyFont
  .LyricsContainer
  .LyricsContent
  .line.bg-line
  .letterGroup,
#SpicyLyricsPage.SpicyRenderer.UseSpicyFont
  .LyricsContainer
  .LyricsContent
  .line.bg-line
  .letterGroup
  .letter {
  font-family: SpicyLyrics, sans-serif;
}

/* @keyframes MusicalLineScaleLoop {
  0% {
    scale: 0.98;
    --ScaleFillDotGap: 0.0007rem;
  }
  50% {
    scale: 1;
    --ScaleFillDotGap: 0.2rem;
  }
  100% {
    scale: 0.98;
    --ScaleFillDotGap: 0.0007rem;
  }
} */
/* ... */

